# craft-vani

./: README.md
craft-vani/: .gitignore  Caddyfile  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  bolt.sh  docker-compose.yml  index.html
craft-vani/crates/app/: Cargo.toml  index.html
craft-vani/crates/app/src/: lib.rs  main.rs
craft-vani/crates/inference/: Cargo.toml
craft-vani/crates/inference/src/: inference.rs  lib.rs
craft-vani/crates/server/: Cargo.toml
craft-vani/crates/server/src/: decoder.rs  main.rs  utils.rs
craft-vani/quantized/: config-tiny-en.json
craft-vani/src/: app.rs  audio.rs  languages.rs  worker.rs
