[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
candle = { version = "0.9.2", package = "candle-core" }
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
num-traits = "0.2.15"
tokenizers = { version = "0.22.0", default-features = false, features = ["unstable_wasm"] }
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
rand = "0.9.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
hound = "3.5.1"
safetensors = "0.7.0"
bincode = "1.3.3"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2"
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"

[dependencies.web-sys]
version = "0.3.70"
features = [
  'console',
]
