[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
inference = { path = "../inference" }
accelerate-src = { version = "0.3.2", optional = true }
clap = { version = "4.2.4", features = ["derive"] }
cpal = "0.15.2"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] , optional = true }
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
futures-util = "0.3.30"
bincode = "1.3.3"
candle = { version = "0.9.2", package = "candle-core" }
safetensors = "0.7.0"
anyhow = "1"
byteorder = "1.4.3"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
hf-hub = "0.4.1"
rand = "0.9.0"
hound = "3.5.1"
rubato = "0.14"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tokenizers = { version = "0.22.0", features = ["onig"] }
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"

[features]
accelerate = [
    "accelerate-src",
    "candle/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
mkl = [
"dep:intel-mkl-src",
"candle/mkl",
"candle-nn/mkl",
"candle-transformers/mkl",
]
